[fuchsia] Fix Scenic focus & input handling.

Implements a number of fixes to text editing across multiple Scenic
windows.

It wires up focus & blur events to the WindowTreeHost and InputMethod,
so that the WTH's text editing modality can be started and stopped
as appropriate.

It also sets up and tears down IME service connections in response
to focus and blur events, because Fuchsia temporarily requires
applications to manage the lifetime of their input focus.


Bug: 919242
Change-Id: I7ed96f312bc65d179f2f8565a4475660b1547a5f
Reviewed-on: https://chromium-review.googlesource.com/c/1403674
Commit-Queue: Kevin Marshall <kmarshall@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621864}
Former-commit-id: 8b9ddf8b8035507c18ef7b11e4af82c4047385a0